# evals

./: .env.example  .gitignore  MANIFEST.in  README.md  build.sh  evaluate.py  main.py  pyproject.toml  requirements.txt  stats.py
apis/: analyzer.py
apis/providers/: anthropic.py  curl.py  gemini.py  huggingface.py  openai.py
data/china/: china_bad_min.jsonl
data/configs/: configs_example.json
data/datasets/: JBB_dataset.json  NANI_dataset.json  jailbreaks_datasets.json
data/datasets/china/: china_bad.jsonl  china_good_min.jsonl
data/info/: README.md  evaluate.py  schema.json  transform.py
data/info/old_evals/: 20241222_000343_HACKING.json  20250106_023118_jailbreak_completions.json  20250106_194207_jailbreak_evaluations.json
data/info/pro-china-pro-western-bias/: 20250130_152619_eval_gemini.json  20250130_155452_eval_anthropic.json  20250130_194924_eval_qwern.json
data/info/qwen2.5-r1-32B/: qwen2.5-32B_completions_1.json  qwen2.5-32B_eval_gemini_1.json  qwen2.5-32B_eval_nani_1.json
data/prompts/: eval1_propaganda_bias.txt  eval_prompts.json
generators/: base.py  completions.py  config.py  evaluations.py
nanidao_evals/: __init__.py  main.py
nanidao_evals/apis/: analyzer.py  base.py
nanidao_evals/apis/providers/: anthropic.py  curl.py
nanidao_evals/data/datasets/: NANI_dataset.json
nanidao_evals/data/prompts/: eval0_system_prompt.txt  eval_prompts.json  (+1 more)
nanidao_evals/generators/: base.py  completions.py  config.py  evaluations.py
tests/: test_apis.py  test_completions.py  test_evaluations.py  test_full_pipeline.py
utils/: stats.py
(+4 files in other folders)
