[project]
name = "nanidao-evals"
version = "0.1.0"
description = "A Python library for generating completions and evaluating NaniDAO models based on custom datasets. Can be run also with other LLMs."
authors = [
    {name = "NaniDAO", email = "nani@nani.ooo"}
]
dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.45.2",
    "google-generativeai>=0.8.4",
    "openai>=1.62.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "tenacity==9.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.scripts]
nanidao-evals = "nanidao_evals.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanidao_evals"]

[tool.hatch.metadata]
allow-direct-references = true